--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,31 @@
-
-/* Your CSS Code here. */
+nav {
+			background-color: #333;
+			color: #fff;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding: 10px;
+		}
+		nav ul {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+			display: flex;
+		}
+		nav ul li {
+			margin-right: 20px;
+		}
+		nav ul li:last-child {
+			margin-right: 0;
+		}
+		nav ul li a {
+			color: #fff;
+			text-decoration: none;
+		}
+		h2 {
+			margin-top: 20px;
+		}
+		video {
+			display: block;
+			margin-top: 20px;
+		}
