--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
 			background-color: #333;
 			color: #fff;
 			display: flex;
@@ -28,4 +28,4 @@ nav {
 		video {
 			display: block;
 			margin-top: 20px;
-		}
+		} */
